# Graphics

./: CMakeLists.txt  README.md
.cache/clangd/index/: context.c.84A695F736E77DB1.idx  egl_context.c.539758E9CD50679F.idx  glfw3.h.2C1A98B4922FD1DF.idx  glfw3native.h.02E6C73E3484271E.idx  glx_context.c.BD9290093E8771BF.idx  init.c.50852A87E47DF5E6.idx  input.c.35968E23878E126E.idx  internal.h.93FF37DF9D44C188.idx  linux_joystick.c.5D9A1823765EB146.idx  linux_joystick.h.58CD18778F21DB9A.idx  main.cpp.664E5F32D0DFD117.idx  mappings.h.1A3A23D67D9C2B08.idx  monitor.c.A9BBF46EF2567922.idx  null_init.c.2203627EFE6D54EF.idx  null_joystick.c.8BC9951928366B35.idx  null_joystick.h.81EE34968A256A89.idx  null_monitor.c.77638C8E62D33162.idx  null_platform.h.1198087C0326336A.idx  null_window.c.8C11C375B1A04CB9.idx  osmesa_context.c.D48D408C28BD3EA8.idx  platform.c.F1910287942FB0C4.idx  platform.h.020C76B4F9F9ECCF.idx  posix_module.c.6E1761BA23783FE6.idx  posix_poll.c.D4FEB188C68CAB0C.idx  posix_poll.h.FD94626EB8BD53EC.idx  posix_thread.c.2B84711BE447DCA0.idx  posix_thread.h.F4AA4992E3611B02.idx  posix_time.c.009350012F44469E.idx  posix_time.h.7E24B8015F30C058.idx  vulkan.c.EDDCEB64FBA975CF.idx  window.c.C598624653A7A82A.idx  wl_init.c.A0908B0DC7F796BC.idx  wl_monitor.c.D8638BAC97A270B0.idx  wl_platform.h.9DF10DF74A5B4A18.idx  wl_window.c.D1BA78E9AABBB33B.idx  x11_init.c.836730B4324BEFE4.idx  x11_monitor.c.4DAF01C0CCBBA3EA.idx  x11_platform.h.B468BD4133D4AFF1.idx  (+3 more)
res/shaders/: Basic.glsl
src/: GlBuffer.cpp  GlBuffer.h  GlVertexArray.cpp  GlVertexArray.h  Shader.cpp  Shader.h  main.cpp
